--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_tech_req.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_tech_req.html.twig
@@ -45,6 +45,6 @@
     <div class="attach-file-btn">
         <i class="icon icon-attach"></i>
         <label for="attach_file">Attach</label>
-        <input id="attach_file" type="file" hidden>
+        <input id="attach_file" type="file" hidden name="tech_requ_files[]">
     </div>
 </div>
