Fix - sent(8 queries - by count fields in form) to server for edit event when you click on new event in carousel / Change logic verifying setting up new values when reload page with events / fix - before, when you set up name of event then event type and additional info set up in previous state / change template for email when create event / fix - set up default value for vanue type in event popup

--- a/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
@@ -16,6 +16,7 @@
             <div><b>- Location:</b> {{ event.location }}</div>
             <div><b>- Number of guests:</b> {{ event.numberOfGuests|replace({"_": " "}) }}</div>
             <div><b>- Event type:</b> {{ event.type.eventType }}</div>
+            <div><b>- Count days:</b> {{ event.countDays }}</div>
             <div><b>- Additional comment:</b> {{ event.additionalInfo }}</div>
         </div>
         <p><b>I am interested in the following acts:</b></p>
