fix showing event timing in request quotation

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -187,7 +187,7 @@
         <div class="row clearfix">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group">
                 <label for="quot_performance_time">Event timing</label>
-                <input type="text" class="form-control" id="quot_performance_time" placeholder="10 p.m." name="performance_time" value="Evening" <%=disabled%>>
+                <input type="text" class="form-control" id="quot_performance_time" placeholder="10 p.m." name="performance_time" value="<%=data.model.timing%>" <%=disabled%>>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group">
